// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Alert Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <p
    class="svelte-sk8cdu"
  >
    Error Alert
  </p>
   
  <div
    class="mzp-c-notification-bar mzp-t-error error svelte-q7l1in"
  >
    <svg
      height="50px"
      viewBox="0 0 24 24"
      width="80px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-linecap="round"
        stroke-width="1"
      >
        <g
          stroke="#000000"
          stroke-width="2"
          transform="translate(6.000000, 6.000000)"
        >
          <path
            d="M0,0 L12,12"
          />
          <path
            d="M0,12 L12,0"
          />
        </g>
      </g>
    </svg>
     
    <div
      class="alert-text svelte-q7l1in"
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
    </div>
  </div>
   
  <p
    class="svelte-sk8cdu"
  >
    Warning Alert
  </p>
   
  <div
    class="mzp-c-notification-bar mzp-t-warning warning svelte-q7l1in"
  >
    <svg
      height="50px"
      viewBox="0 0 24 24"
      width="80px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-width="1"
      >
        <g
          transform="translate(1.000000, 2.000000)"
        >
          <path
            d="M9.29,1.86 L0.82,16 C0.464641628,16.6153996 0.462519934,17.3731469 0.81442652,17.9905269 C1.16633311,18.6079069 1.81941202,18.9921898 2.53,19 L19.47,19 C20.180588,18.9921898 20.8336669,18.6079069 21.1855735,17.9905269 C21.5374801,17.3731469 21.5353584,16.6153996 21.18,16 L12.71,1.86 C12.3474343,1.26228132 11.6990862,0.897255995 11,0.897255995 C10.3009138,0.897255995 9.65256566,1.26228132 9.29,1.86 Z"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M11,7 L11,11"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <circle
            cx="11"
            cy="15"
            fill="#000000"
            r="1"
          />
        </g>
      </g>
    </svg>
     
    <div
      class="alert-text svelte-q7l1in"
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
    </div>
  </div>
   
  <p
    class="svelte-sk8cdu"
  >
    Success Alert
  </p>
   
  <div
    class="mzp-c-notification-bar mzp-t-success success svelte-q7l1in"
  >
    <svg
      height="50px"
      viewBox="0 0 24 24"
      width="80px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1"
      >
        <polyline
          points="20 6 9 17 4 12"
          stroke="#000000"
          stroke-width="2"
        />
      </g>
    </svg>
     
    <div
      class="alert-text svelte-q7l1in"
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
    </div>
  </div>
</section>
`;

exports[`Storyshots Breadcrumb App Details Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Apps List Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Big Query Table Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/pings/activation"
      >
        activation
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/tables/activation/"
      >
        activation table
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Metric Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/metrics/about_page.libraries_tapped"
      >
        about_page.libraries_tapped
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Ping Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="svelte-f5f52z"
    style=""
  >
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/"
      >
        apps
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/"
      >
        fenix
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        /
      </span>
       
    </li>
    <li
      class="svelte-f5f52z"
    >
      <a
        class="link-name svelte-f5f52z"
        href="/apps/fenix/pings/activation"
      >
        activation
         
      </a>
      <span
        class="svelte-f5f52z"
      >
        
      </span>
       
    </li>
  </ol>
</section>
`;

exports[`Storyshots Bug Links Bugzilla 1`] = `
<section
  class="storybook-snapshot-container"
>
  <a
    href="https://bugzilla.mozilla.org/1234"
    target="_blank"
  >
    bugzil.la/1234
  </a>
</section>
`;

exports[`Storyshots Bug Links Git Hub 1`] = `
<section
  class="storybook-snapshot-container"
>
  <a
    href="https://github.com/mozilla-mobile/fenix/issues/1234"
    target="_blank"
  >
    mozilla-mobile/fenix#1234
  </a>
</section>
`;

exports[`Storyshots Email Addresses Multiple Emails 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:example@example.com"
    >
      example@example.com
    </a>
  </span>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:email@email.com"
    >
      email@email.com
    </a>
  </span>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:post@pigeon.com"
    >
      post@pigeon.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots Email Addresses Single Email 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="svelte-15gk75t"
  >
    <a
      class="svelte-15gk75t"
      href="mailto:glean@mozilla.com"
    >
      glean@mozilla.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots FilterInput Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="container"
  >
    <div
      class="svelte-y697ub"
    >
      <input
        class="svelte-y697ub"
        id="filter-input"
        placeholder="filter terms"
        type="text"
      />
    </div>
     
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
      <li>
        foobar
      </li>
      <li>
        lorem
      </li>
      <li>
        ipsum
      </li>
    </ul>
  </div>
</section>
`;

exports[`Storyshots ItemList Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="svelte-y697ub"
  >
    <input
      class="svelte-y697ub"
      id="filter-input"
      placeholder="filter terms"
      type="text"
    />
  </div>
   
  <div
    class="item-browser svelte-1jyksu7"
  >
    <table
      class="mzp-u-data-table svelte-1jyksu7"
    >
      <col
        class="svelte-1jyksu7"
        width="35%"
      />
       
      <col
        class="svelte-1jyksu7"
        width="25%"
      />
       
      <col
        class="svelte-1jyksu7"
        width="40%"
      />
       
      <thead
        class="svelte-1jyksu7"
      >
        <tr
          class="svelte-1jyksu7"
        >
          <th
            class="svelte-1jyksu7"
            scope="col"
            style="text-align: center;"
          >
            Name
          </th>
           
          <th
            class="svelte-1jyksu7"
            scope="col"
            style="text-align: center;"
          >
            Type
          </th>
           
          <th
            class="svelte-1jyksu7"
            scope="col"
            style="text-align: center;"
          >
            Description
          </th>
        </tr>
      </thead>
       
      <tbody
        class="svelte-1jyksu7"
      >
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 0"
            >
              Test metric 0
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 0
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 1"
            >
              Test metric 1
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 1
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 2"
            >
              Test metric 2
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 2
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 3"
            >
              Test metric 3
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 3
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 4"
            >
              Test metric 4
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 4
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 5"
            >
              Test metric 5
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 5
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 6"
            >
              Test metric 6
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 6
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 7"
            >
              Test metric 7
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 7
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 8"
            >
              Test metric 8
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 8
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 9"
            >
              Test metric 9
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 9
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 10"
            >
              Test metric 10
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 10
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 11"
            >
              Test metric 11
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 11
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 12"
            >
              Test metric 12
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 12
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 13"
            >
              Test metric 13
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 13
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 14"
            >
              Test metric 14
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 14
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 15"
            >
              Test metric 15
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 15
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 16"
            >
              Test metric 16
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 16
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 17"
            >
              Test metric 17
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 17
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 18"
            >
              Test metric 18
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 18
            
          </td>
           
        </tr>
        <tr
          class="svelte-1jyksu7"
        >
          <td
            class="svelte-1jyksu7"
          >
            <a
              class="svelte-1jyksu7"
              href="/apps/app-name/metrics/Test metric 19"
            >
              Test metric 19
            </a>
          </td>
           
          <td
            class="svelte-1jyksu7"
            style="text-align: center;"
          >
            <code
              class="svelte-1jyksu7"
            >
              metric_type
            </code>
          </td>
           
          <td
            class="description svelte-1jyksu7"
          >
            This is test metric 19
            
          </td>
           
        </tr>
      </tbody>
    </table>
  </div>
   
  <div
    class="pagination-position svelte-bkgwc9"
  >
    <p
      class="svelte-bkgwc9"
    >
      Page
    
      <code
        class="svelte-bkgwc9"
      >
        1
      </code>
      
    of
    
      <code
        class="svelte-bkgwc9"
      >
        2
      </code>
      
    (
      <code
        class="svelte-bkgwc9"
      >
        1
      </code>
      
    -
    
      <code
        class="svelte-bkgwc9"
      >
        20
      </code>
      
    on
    
      <code
        class="svelte-bkgwc9"
      >
        21
      </code>
      
    items)
    </p>
  </div>
   
  <div
    class="pagination-bar svelte-bkgwc9"
  >
    <div
      class="pagination-button current-page svelte-bkgwc9"
    >
      <svg
        class="feather feather-chevron-left w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="15 18 9 12 15 6"
        />
      </svg>
    </div>
     
    <div
      class="pages svelte-bkgwc9"
    >
      <div
        class="page current-page svelte-bkgwc9"
      >
        1
         
      </div>
      <div
        class="page  svelte-bkgwc9"
      >
        2
         
      </div>
    </div>
     
    <div
      class="pagination-button  svelte-bkgwc9"
    >
      <svg
        class="feather feather-chevron-right w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
  </div>
  
  
</section>
`;

exports[`Storyshots Markdown Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  A 
  <em>
    text
  </em>
   in markdown 
  <a
    href="https://mozilla.org"
  >
    moz
  </a>
  .
  
</section>
`;

exports[`Storyshots Pagination Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="pagination-position svelte-w3m83n"
  >
    <p
      class="svelte-w3m83n"
    >
      Page
    
      <code
        class="svelte-w3m83n"
      >
        1
      </code>
      
    of
    
      <code
        class="svelte-w3m83n"
      >
        11
      </code>
      
    (
      <code
        class="svelte-w3m83n"
      >
        1
      </code>
      
    -
    
      <code
        class="svelte-w3m83n"
      >
        20
      </code>
      
    on
    
      <code
        class="svelte-w3m83n"
      >
        210
      </code>
      
    items)
    </p>
  </div>
   
  <div
    class="pagination-bar svelte-w3m83n"
  >
    <div
      class="pagination-button current-page svelte-w3m83n"
    >
      <svg
        class="feather feather-chevron-left w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="15 18 9 12 15 6"
        />
      </svg>
    </div>
     
    <div
      class="pages svelte-w3m83n"
    >
      <div
        class="page current-page svelte-w3m83n"
      >
        1
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        2
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        3
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        ...
         
      </div>
      <div
        class="page  svelte-w3m83n"
      >
        11
         
      </div>
    </div>
     
    <div
      class="pagination-button  svelte-w3m83n"
    >
      <svg
        class="feather feather-chevron-right w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
  </div>
  
</section>
`;

exports[`Storyshots Pill Deprecated 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="pill svelte-zw85gu"
    style="background-color: rgb(74, 85, 104);"
  >
    Deprecated
  </div>
</section>
`;

exports[`Storyshots Schema Viewer Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="schema-viewer svelte-1m543xb"
  >
    <h1
      class="svelte-cviqid"
    >
      Schema
    </h1>
     
    <div
      class="svelte-y697ub"
    >
      <input
        class="svelte-y697ub"
        id="filter-input"
        placeholder="filter terms"
        type="text"
      />
    </div>
     
    <div
      class="schema-browser svelte-1m543xb"
    >
      <p
        class="svelte-1m543xb"
      >
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              
              
            </span>
            <span
              class="svelte-19dwd80"
            >
              additional_properties
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              A JSON string containing any payload properties not present in the schema
            </p>
             
          </p>
        </div>
         
        
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              
              
            </span>
            <span
              class="svelte-19dwd80"
            >
              client_info
            </span>
             
             
          </p>
        </div>
         
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              client_info
              .
            </span>
            <span
              class="svelte-19dwd80"
            >
              os_version
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              The user-visible version of the operating system (e.g. "1.2.3"). If the version detection fails, this metric gets set to \`Unknown\`.
            </p>
             
          </p>
        </div>
         
        
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              client_info
              .
            </span>
            <span
              class="svelte-19dwd80"
            >
              telemetry_sdk_build
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              The version of the Glean SDK
            </p>
             
          </p>
        </div>
         
        
        
        
        <div
          class="svelte-19dwd80"
          style=""
        >
          <p
            class="node svelte-19dwd80"
          >
            <span
              class="parent-node svelte-19dwd80"
            >
              
              
            </span>
            <span
              class="svelte-19dwd80"
            >
              document_id
            </span>
             
            <p
              class="node-description svelte-19dwd80"
            >
              The document ID specified in the URI when the client sent this message
            </p>
             
          </p>
        </div>
         
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots Tab Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="tabs svelte-1diarvn"
  />
   
  <div
    class="tab-content svelte-1diarvn"
  >
    <div
      class="title svelte-o9jp6f active"
    >
      A
    </div>
    <div
      class="title svelte-o9jp6f"
    >
      B
    </div>
     
    <div
      class="box svelte-1wor136"
    >
      Content for Tab A
    </div>
    
    
    
  </div>
</section>
`;
